--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  widgets_to_image: ^1.0.0
+  universal_html: ^2.2.4
   core_image_editor:
     path: ../
 
