--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   google_fonts: ^6.2.1
   universal_html: ^2.2.4
+  widgets_to_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
