--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
   google_fonts: ^6.2.1
+  provider: ^6.1.2
   universal_html: ^2.2.4
   widgets_to_image: ^1.0.0
 
