--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   universal_html: ^2.2.4
   core_image_editor:
     path: ../
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -77,17 +78,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: English
+      fonts:
+        - asset: assets/fonts/English.ttf
+    - family: Lohit-Assamese
+      fonts:
+        - asset: assets/fonts/Lohit-Assamese.ttf
+    - family: Lohit-Bengali
+      fonts:
+        - asset: assets/fonts/Lohit-Bengali.ttf
+    - family: Lohit-Devanagari
+      fonts:
+        - asset: assets/fonts/Lohit-Devanagari.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
